--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.1",
+    "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "tailwindcss": "^4.1.12"
   }
 }
