--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,1 +1,14 @@
-{}
+{
+  "printWidth": 100,                
+  "tabWidth": 2,           
+  "useTabs": false,              
+  "semi": true,              
+  "singleQuote": true,               
+  "trailingComma": "es5",
+  "bracketSpacing": true,          
+  "arrowParens": "always",         
+  "endOfLine": "lf",            
+  "vueIndentScriptAndStyle": true,   
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindConfig": "./tailwind.config.js" 
+}
