--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -5,9 +5,10 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
-  },
+    },
+    "allowJs": true,
 
+  },
   "references": [
     {
       "path": "./tsconfig.config.json"
