--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
