--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-vue": "^8.6.0",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
     "vue-i18n": "^9.2.2",
