--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^18.3.24",
     "@types/react-dom": "^18.3.7",
+    "@vue/tsconfig": "^0.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.2",
